--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Press w to accelerate forward
-		    Press a to turn left
-		    Press s to accelerate backward
-		    Press d to turn right
+		    Press w to accelerate forward<br>
+		    Press a to turn left<br>
+		    Press s to accelerate backward<br>
+		    Press d to turn right<br>
 		    Press h for hyperspace
 	    </footer>
 	</body>
