--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		    Press a to turn left<br>
 		    Press s to accelerate backward<br>
 		    Press d to turn right<br>
-		    Press h for hyperspace
+		    Press h for hyperspace<br>
+		    Left click to shoot
 	    </footer>
 	</body>
 </html>
